gcc/testsuite/rust.test/compilable/type_infer4.rs
fn main() {
    let xs: [i32; 5] = [1, 2, 3, 4, 5];
    let xy = [6, 7, 8];

    let a = xs[0];
    let b = xy[2];
    let mut c;
    c = xs[0];
}
