gcc/testsuite/rust.test/fail_compilation/tuple_struct2.rs
struct Bar(i32, i32, bool);

fn main() {
    let a = Bar(1, 2);
}
